# SpecialistBot

./: .gitignore  CMakeLists.txt
config/: .gitignore  sp_config.json
include/: sp.h
include/events/: on_application_create.h  on_ready.h  on_sigint.h
src/: CMakeLists.txt  main.c
src/events/: CMakeLists.txt  on_application_create.c  on_ready.c  on_sigint.c
